--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img style="margin-left: 250px;" src="imagens/linha2.png" alt="linha">
-    <header style="display: flex;">
-        <img id ="Busca" src="imagens/busca.png" alt="busca">
-        <h1 id = "Topo">Topos de bolos</h1>
-        <h1 id = "Caixinhas">Caixinhas</h1>
-        <h1 id = "Outros">Outros</h1>
-        <h1 id = "Contatos">Contatos</h1> 
+    <img id="linha" src="imagens/linha2.png" alt="linha">
+    <header style="display: flex;text-align: center;justify-content: center;">
+        <div id="busca"></div>
+        <a class ="menu" href="index.html" target="_self">Topos de bolos</a>
+        <a class ="menu" href="index.html" target="_self">Caixinhas</a>
+        <a class ="menu" href="index.html" target="_self">Outros</a>
+        <a class ="menu" href="index.html" target="_self">Contatos</a> 
     </header>
-
-    <main class="principal">
-        <section class="caixa-cinza">
-            <h1 class="NOVIDADES">NOVIDADES</h1>
-        </section>
-
+    <section id="white-square">
+        <div id="news">
+            <h1> Novidades</h1>
+            <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 50%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;margin-top: -50px;justify-content: center;"></a>
+        </div>
+    </section>
     </main>
 </body>
 </html>
