--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mimos e personalizados</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: #8a8a8a48;">
     <img id="linha" src="imagens/linha2.png" alt="linha">
     <header style="display: flex;text-align: center;justify-content: center;">
         <div id="busca"></div>
@@ -16,10 +16,49 @@
         <a class ="menu" href="index.html" target="_self">Contatos</a> 
     </header>
     <section id="white-square">
-        <div id="news">
+        <div id="square">
             <h1> Novidades</h1>
-            <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 50%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;margin-top: -50px;justify-content: center;"></a>
+            <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;margin: auto;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 50%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;"></a>
+            <p class="paragraph">Se você ama deixar seus bolos ainda mais especiais, prepare-se para as novidades que acabaram de chegar! Estamos sempre inovando para trazer topos de bolo que fazem toda a diferença na sua celebração, e desta vez não é diferente!</p></div>
+            <hr style="width: 50%;">
         </div>
+        <div id = "square">
+            <h1>Topos de bolo</h1>
+            <div id="pictures">
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 70%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;"></a>
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 70%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;"></a>
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 70%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;"></a>
+            </div>
+            <div id="pictures">
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 45%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;margin-top: 10px;"></a>
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 45%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;margin-top: 10px;"></a>
+            </div>
+        <p class="paragraph">Ao longo do tempo, criamos coleções incríveis de topos de bolo, cada uma com um toque especial para tornar as celebrações ainda mais memoráveis. Se você perdeu alguma edição ou quer se inspirar para sua próxima festa, confira alguns dos nossos destaques!</p>
+        </div>
+        <hr style="width: 50%;">
+        <div id = "square">
+            <h1>Caixinhas</h1>
+            <div id="pictures">
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 70%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;"></a>
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 70%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;"></a>
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 70%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;"></a>
+            </div>
+            <div id="pictures">
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 45%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;margin-top: 10px;"></a>
+                <a href="https://www.instagram.com/p/DHRzlFjy2-r/" target="_blank" style="justify-content: center;text-align: center;"><img src="imagens/novidades.jpg" alt="novidades.jpg" style="width: 45%;border-radius: 30px;box-shadow:5px 5px 5px #00000060;margin-top: 10px;"></a>
+            </div>
+        <p class="paragraph">Ao longo do tempo, criamos coleções encantadoras de caixinhas, perfeitas para presentear com estilo, decorar festas ou tornar qualquer momento ainda mais especial. Se você perdeu alguma edição ou quer se inspirar para sua próxima encomenda, confira alguns dos nossos destaques!!</p>
+        </div>
+        <hr style="width: 50%;">
+        <div id ="square">
+            <h1 id="title">Contatos</h1>
+                <div id="pictures">
+                    <img src="imagens/logo.png" alt="logo_mimos">
+                    <a class="logo" href="https://www.instagram.com/_milenamimospersonalizados/" target="_blank"><img src="imagens/logo_instagram.png" alt="instagram"></a>
+                    <a class="logo" href="https://wa.me/021992706622" target="_blank"><img src="imagens/logo_wpp.png" alt="instagram"></a>
+                </div>
+        </div>
+        <hr style="width: 50%;">
     </section>
     </main>
 </body>
